--- a/app/tpls/modal/appointmentTime.html
+++ b/app/tpls/modal/appointmentTime.html
@@ -45,6 +45,11 @@
 		float: left;
 		margin: 15px 10px;
 	}
+	.datetimepicker-minutes{
+		height: 200px;
+		overflow-x: hidden;
+		overflow-y: scroll;
+	}
 </style>
 <div class="modal-header">
 	<h3>预约类型
