--- a/app/tpls/home/leftnav/projectNavUserManagement.html
+++ b/app/tpls/home/leftnav/projectNavUserManagement.html
@@ -16,8 +16,8 @@
                 </span>
                 <ul class="dropdown-menu transition" dropdown-menu role="menu">
                     <span class="triangle"></span>
-                    <li><i class="iconfont icon-addpeople_fill"></i><span>新增子节点</span></li>
-                    <li><i class="iconfont icon-addpeople_fill"></i><span>新增同级节点</span></li>
+                    <li><i class="iconfont icon-tianjia1"></i><span>新增子节点</span></li>
+                    <li><i class="iconfont icon-449xianxingtianjiatongji" style="font-size: 16px;"></i><span>新增同级节点</span></li>
                 </ul>               
             </div>                               
         </div>
