--- a/app/tpls/home/main/back-stageManagement/dataDictionary.html
+++ b/app/tpls/home/main/back-stageManagement/dataDictionary.html
@@ -11,7 +11,7 @@
                     <i class="iconfont icon-tianjia-copy"></i>添加
                </span>
 				<span class="chatIconButton floatleft" ng-click="">
-                    <i class="iconfont icon-editor"></i>修改
+                    <i class="iconfont icon-bianji"></i>修改
                 </span>
 				<span class="chatIconButton floatleft" ng-click="">
                     <i class="iconfont icon-empty_fill"></i>删除
@@ -20,8 +20,7 @@
 			</div>            
             <div class="userCaseListTable">
                 <div style="" ui-grid="gridAttributeValue"  ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
-            </div>
-            
+            </div>            
         </div>
     </div>
 </div>
