--- a/app/tpls/home/main/projectlist/projectCreateProject.html
+++ b/app/tpls/home/main/projectlist/projectCreateProject.html
@@ -119,8 +119,8 @@
 												<i class="iconfont icon-gengduo floatright tooltipdefaulticon" dropdown-toggle></i>
 												<ul class="dropdown-menu dropdown-menu-right transition" dropdown-menu role="menu">
 													<span class="triangle"></span>
-													<li><i class="iconfont icon-addpeople_fill"></i><span>下载</span></li>
-													<li><i class="iconfont icon-addpeople_fill"></i><span>删除</span></li>
+													<li><i class="iconfont icon-download" style="font-size: 14px;"></i><span>下载</span></li>
+													<li><i class="iconfont icon-empty_fill"></i><span>删除</span></li>
 												</ul>
 											</div>
 										</div>
