--- a/app/tpls/home/main/back-stageManagement/roleGroupManagement.html
+++ b/app/tpls/home/main/back-stageManagement/roleGroupManagement.html
@@ -60,7 +60,7 @@
 		margin: 15px 30px;
 	}
 </style>
-<div class="projectBodyBox">
+<div class="projectBodyBox" ng-controller="roleGroupManagementCtrl">
 	<div class="projectBodyTitle">
 		角色及权限配置
 	</div>
@@ -71,7 +71,7 @@
                     <i class="iconfont icon-tianjia-copy"></i>添加
                </span>
 				<span class="chatIconButton floatleft" ng-click="">
-                    <i class="iconfont icon-editor"></i>修改
+                    <i class="iconfont icon-bianji"></i>修改
                 </span>
 				<span class="chatIconButton floatleft" ng-click="">
                     <i class="iconfont icon-empty_fill"></i>删除
