--- a/app/tpls/home/main/statement/statementDetail.html
+++ b/app/tpls/home/main/statement/statementDetail.html
@@ -1,29 +1,22 @@
-<div class="projectDetailBox" ng-controller="statementCtrl">
-    <div class="detailTitle">
-        <span class="floatleft bugId">233</span>
-        <span class="bugName text_ellipsis">测试集名称</span>
-        <input type="button" class="btndefault btndefault_blue floatright" name="" value="保存">
+<div class="projectBodyBox" ng-controller="modalCtrl">
+    <div class="projectBodyTitle">
+        运行名称
+        <div class="floatright rightBox">           
+            <input type="button" class="floatright btndefault btndefault_blue" name="" id="" value="返回" ng-click="back()"/>
+        </div>
     </div>
-    <div class="bugDetailBox" ng-init="isAttribute=1">
-        <div class="tab">
-            <span ng-class="{current:isAttribute==1}" ng-click="isAttribute=1">属性</span>
-            <span ng-class="{current:isAttribute==2}" ng-click="isAttribute=2">脚本</span>
-            <span ng-class="{current:isAttribute==3}" ng-click="isAttribute=3">关联用例表</span>
-        </div>
-        <div id="statementDetail" class="detailAttribute detailAttribute1" ng-show="isAttribute==1">
-            <div class="detailAttributeTop">
-                <div ui-grid="gridOptions" ui-grid-tree-view ui-grid-resize-columns class="gridTableBox gridTableBox1"></div>
+    <div class="projectBodyContent" style="top: 56px;left:0px" ng-controller="statementCtrl">
+        <div class="useCaseList " style="bottom:0px;overflow-y: auto;" ng-style="useCaseListStyle">
+            <div class="useCaseListfunction">
+                <span class="floatleft selectNum">已选中2项：</span>
+                <span class="chatIconButton" ui-sref="index.createbug({num:5})">
+                    <i class="iconfont icon-addition_fill"></i>提交缺陷
+                </span>
+                <div class="clear"></div>
             </div>
-            <div class="detailAttributeBottom" resizable r-directions="['top']">
-                <div class="title">数据字典(单击用例名称查看)
-                    <i class="floatright iconfont icon-close tooltipdefaulticon cursor_p" ng-click="hideBottom()"></i>
-                </div>
-                <div class="content">                               
-                    <div style="background: #fff" ui-grid="gridOptions1" ui-grid-resize-columns class="gridTableBox gridTableBox1"></div>
-                </div>
+            <div class="userCaseListTable">
+                <div ui-grid="gridOptions" ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
             </div>
-        </div>
-        <div class="detailAttribute" ng-show="isAttribute==2">
         </div>
     </div>
 </div>
